Added a legend on the top of the screen

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,6 +5,13 @@
          alt="videtur">
     <span>UL Timetable</span>
   </a>
+  <div class="legend-outer-container">
+    <div class="legend-inner-container">
+      <div class="legend-item"><md-icon svgIcon="tutorial" mdTooltip="Tutorial"></md-icon> = Tutorial</div>  
+      <div class="legend-item"><md-icon svgIcon="lecture" mdTooltip="Lecture"></md-icon> = Lecture</div>  
+      <div class="legend-item"><md-icon svgIcon="lab" mdTooltip="Lab"></md-icon> = Lab</div>  
+    </div>
+  </div>
   <div class="flex-spacer"></div>
   <a md-button class="timetable-button" href="https://github.com/videtur/ul-timetable-client" aria-label="GitHub Repository">
     <img class="timetable-github-logo"
